@@ -8,6 +8,7 @@
 - the way of calling the FCKeditor file manager connector was changed, now the upload path is not passed anymore
 - Scriptaculous was updated to 1.7.0
 - Prototype was updated to 1.5.0
+- onBlur(), onDblClick(), onFocus(), onMouseDown(), onMouseMove(), onMouseUp(), onSelect() methods were added to P4A_Widget
 
 1.99.15
 - some more error messages were put in the code
